[package]
name = "bundler"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.41", features = ["full"] }
alloy-mev = { version = "1.0.0" }
alloy-rpc-types-mev = { version = "1.0.41" }
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env"] }
eyre = "0.6.12"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy-serde = "1.0.41"
